--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,284 @@
-.App {
+
+#contatti{
+  background-color: #70c3be;
+  letter-spacing: 2px;
+  }
+#contatti a{
+  color: #fff;
+  text-decoration: none;
+}
+
+
+@media (max-width: 575.98px) {
+
+  #contatti{padding-bottom: 800px;}
+  #contatti .maps iframe{
+    width: 100%;
+    height: 450px;
+  }
+ }
+
+
+@media (min-width: 576px) {
+
+   #contatti{padding-bottom: 800px;}
+
+   #contatti .maps iframe{
+     width: 100%;
+     height: 450px;
+   }
+ }
+
+@media (min-width: 768px) {
+
+  #contatti{padding-bottom: 350px;}
+
+  #contatti .maps iframe{
+    width: 100%;
+    height: 850px;
+  }
+}
+
+@media (min-width: 992px) {
+  #contatti{padding-bottom: 200px;}
+
+   #contatti .maps iframe{
+     width: 100%;
+     height: 700px;
+   }
+}
+
+
+#author a{
+  color: #fff;
+  text-decoration: none;
+    
+}
+
+/* design of choose */
+
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,100,900);
+
+html,
+body {
+  -moz-box-sizing: border-box;
+       box-sizing: border-box;
+  height: 100%;
+  width: 100%; 
+  background: #FFF;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+}
+ 
+.wrapper {
+  display: table;
+  height: 100%;
+  width: 100%;
+}
+
+.container-fostrap {
+  display: table-cell;
+  padding: 1em;
   text-align: center;
+  vertical-align: middle;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.fostrap-logo {
+  width: 100px;
+  margin-bottom:15px
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+h1.heading {
+  color: #fff;
+  font-size: 1.12em;
+  font-weight: 300;
+  margin: 0 0 0.5em;
+  color: #505050;
+}
+@media (min-width: 450px) {
+  h1.heading {
+    font-size: 3.55em;
   }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+@media (min-width: 760px) {
+  h1.heading {
+    font-size: 3.05em;
+  }
+}
+@media (min-width: 900px) {
+  h1.heading {
+    font-size: 3.25em;
+    margin: 0 0 0.3em;
+  }
+} 
+.card {
+  display: block; 
+    margin-bottom: 20px;
+    line-height: 1.42857143;
+    background-color: #fff;
+    border-radius: 2px;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); 
+    transition: box-shadow .10s; 
+    
+}
+.card:hover {
+  box-shadow: 0 8px 17px 0 rgba(70, 218, 18, 0.8),0 6px 20px 0 rgba(70, 218, 18, 0.8);
+  
+}
+.img-card {
+  width: 100%;
+  height:200px;
+  border-top-left-radius:2px;
+  border-top-right-radius:2px;
+  display:block;
+    overflow: hidden;
+}
+.img-card img{
+  width: 100%;
+  height: 200px;
+  object-fit:cover; 
+  transition: all .25s ease;
+} 
+.card-content {
+  padding:15px;
+  text-align:left;
+}
+.card-title {
+  margin-top:0px;
+  font-weight: 700;
+  font-size: 1.65em;
+}
+.card-title a {
+  color: #000;
+  text-decoration: none !important;
+}
+.card-read-more {
+  border-top: 1px solid #D4D4D4;
+}
+.card-read-more a {
+  text-decoration: none !important;
+  padding:10px;
+  font-weight:600;
+  text-transform: uppercase
 }
 
-.App-link {
-  color: #61dafb;
+
+
+
+/* why we choose us */
+
+.heading{
+  font-size:20px;
+  font-weight:600;
+  color:#3D5AFE;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.line1{
+  color:#000;
+  font-size:12px;
+
+}
+ .line2{
+  color:#000;
+  font-size:12px;
+  
+}
+ .line3{
+  color:#000;
+  font-size:12px;
+  
+}
+
+.cards{
+
+  transition: all 0.2s ease;
+  cursor: pointer;
+  
+
+}
+  
+
+
+.cards:hover{
+
+  box-shadow: 5px 6px 6px 2px #e9ecef;
+  transform: scale(1.1);
+}
+
+
+
+/* testimonials components css */
+
+
+
+.client {
+  width: 100%;
+	height: 100%;
+  background-color: #2945df;
+
+}
+
+/* #080457 */
+
+
+.t-card {
+    padding: 1.8125rem 1.125rem;
+    background-color: rgba(15, 3, 106, 0.73);
+    border-radius: 1.25rem;
+    color: white;
+    height: auto;
+}
+
+.arrow-down {
+    width: 0;
+    height: 10;
+    border-left: 1.5625rem solid transparent;
+    border-right: 1.5625rem solid transparent;
+    border-top: 1.25rem solid rgba(15, 3, 106, 0.73);
+    
+}
+
+
+
+/* courses container css */
+.Courses_container{
+  text-align: justify;
+  border-radius: 10px;
+}
+
+.degree{
+  text-align: justify;
+}
+  
+/* footer content css */
+
+.footer_content {
+  text-align: justify;
+}
+
+/* navbar components css */
+
+.about_color{
+  color:#fcfcfc;
+  font-weight: bold;
+}
+
+/* Placement components css */
+
+.placement {
+  margin-top: 5rem;
+  background-color: #474b52;
+}
+
+.sectors_employing {
+  color: #000;
+}
+
+.container_placement{
+  border-radius: 15px;
+  border-color: #000;
+  border-style: groove;
+}
+
+.table_color_first{
+  backgroundColor:rgba(112, 167, 176, 1);
 }
