--- a/src/App.css
+++ b/src/App.css
@@ -194,21 +194,22 @@ h1.heading {
  .line3{
   color:#000;
   font-size:12px;
-  
 }
 
 .cards{
-
   transition: all 0.2s ease;
   cursor: pointer;
-  
-
+  color: #2945df;
+  /* background-color: brown; */
 }
+/* .lovely {
+  background-color: #2945df;
+} */
+
   
 
 
 .cards:hover{
-
   box-shadow: 5px 6px 6px 2px #e9ecef;
   transform: scale(1.1);
 }
