--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -209,8 +209,8 @@ img {
   .card .content .back .des{
     font-size:20px;
     text-align: justify;
-    padding:20px 0px;
-    text-indent: 20px;
+    /* padding:20px 0px;
+    text-indent: 20px; */
   }
   .card .content .back .social-icon{
     list-style:none;
