--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -91,41 +91,41 @@ img {
 
 /* about use css*/
 
-* {
+/* * {
     box-sizing: border-box;
-  }
+  } */
   .title{
     font-size:60px;
     padding:20px 0px;
   }
-  body {
+  /* body {
     font-family: 'Lato', sans-serif;
     background-color:#eaeaea;
-  }
-  .container{
+  } */
+  /* .container{
     width:900px;
     margin:0px auto;
-  }
-  /* Float three columns side by side */
-  .column {
+  } */
+ 
+  /* .column {
     float: left;
     width: 100%;
     padding: 0 10px;
     margin-left: 20px;
   }
   
-  /* Remove extra left and right margins, due to padding */
+ 
   .row {margin: 0 -5px;}
   
-  /* Clear floats after the columns */
+  
   .row:after {
     content: "";
     display: table;
     clear: both;
-  }
+  } */
   
   /* Responsive columns */
-  @media screen and (max-width: 700px) {
+  /* @media screen and (max-width: 700px) {
     
    .container{
     width: 100%;
@@ -138,7 +138,7 @@ img {
     }
   }
   
-  /* Style the counter cards */
+  
   .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     padding: 5px;
@@ -209,8 +209,6 @@ img {
   .card .content .back .des{
     font-size:20px;
     text-align: justify;
-    /* padding:20px 0px;
-    text-indent: 20px; */
   }
   .card .content .back .social-icon{
     list-style:none;
@@ -230,7 +228,7 @@ img {
     text-align:center;
     line-height:40px;
     border-radius:100%;
-  }
+  } */
 
  /* why choose us */
 
@@ -239,8 +237,283 @@ img {
   font-weight: 700;
  }
 
+ .des{
+  text-align: justify;
+ }
+
+ .center{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 150px;
+  
+ }
+
+ .About_heading{
+  font-size: 40px;
+  font-weight: 600;
+ }
+
+ .double_section{
+  background-color: rgba(172, 175, 240, 0.8);
+ }
+
+
+ /* ENQUIRY BUTTON START FROM HERE */
+ .trigger_popup {
+  transform: rotate( 270deg );
+  position: fixed;
+  top: 205px;
+  right: -18px;
+  z-index: 999;
+  cursor: pointer;
+  background-color: #660029;
+  border-radius: 5px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+  padding: 10px 16px;
+  font-size: 14px;
+  color: #fff;
+  line-height: 1.33;
+ }
+ .border-0 {
+  border: 0!important;
+}
 
 
 
+/* Home Social button stary from here */
 
 
+/* 
+#side-quick-links .watsapp:hover .content {
+    height: 40px;
+    padding-top: 14px;
+}
+#side-quick-links .watsapp:hover .content>a {
+    height: 41px;
+ 
+}
+#side-quick-links .watsapp:hover .con {
+    width: 0px;
+}
+#side-quick-links .watsapp:hover .con {
+    position: fixed;
+    right: -18px;
+}
+
+#side-quick-links {
+  position: fixed;
+  right: 0;
+  top: 60%;
+  text-align: center;
+  z-index: 999;
+}
+
+#side-quick-links ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  position: relative;
+}
+#side-quick-links .call {
+  top: 0;
+}
+
+#side-quick-links li {
+  position: absolute;
+  right: -145px;
+  -webkit-transition: all .5s cubic-bezier(.19,1,.22,1) .2s;
+}
+#side-quick-links .call .content {
+  background-color: #ed027b;
+}
+#side-quick-links .content {
+  height: 40px;
+  width: 183px;
+  text-align: middle;
+  padding: 0 10px 0 46px;
+}
+
+#side-quick-links li.call .content>a {
+  background: #ca0269;
+}
+
+#side-quick-links li .content>a {
+  width: 40px;
+  height: 40px;
+  line-height: 40px!important;
+  display: block;
+  z-index: 5;
+  opacity: 1!important;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+#side-quick-links .fa {
+  font-size: 22px;
+  color: #fff;
+  line-height: 40px;
+}
+
+.fa {
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: inherit;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  transform: translate(0, 0);
+}
+#side-quick-links li p {
+  margin: 0;
+  line-height: 40px;
+  text-align: left;
+}
+p {
+  font-family: Roboto,sans-serif!important;
+  
+}
+
+a {
+  color: #fff;
+  text-decoration: none;
+}
+
+#side-quick-links .marker {
+  top: 40px;
+}
+
+#side-quick-links li {
+  position: absolute;
+  right: -145px;
+  -webkit-transition: all .5s cubic-bezier(.19,1,.22,1) .2s;
+}
+
+#side-quick-links .marker .content {
+  background-color: #fc654c;
+}
+
+#side-quick-links .content {
+  height: 40px;
+  width: 183px;
+  text-align: middle;
+  padding: 0 10px 0 46px;
+}
+
+
+element.style {
+}
+#side-quick-links li.marker .content>a {
+    background: #e45c46;
+}
+#side-quick-links li .content>a {
+    width: 40px;
+    height: 40px;
+    line-height: 40px!important;
+    display: block;
+    z-index: 5;
+    opacity: 1!important;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+#side-quick-links .fa {
+  font-size: 22px;
+  color: #fff;
+  line-height: 40px;
+}
+
+#side-quick-links li.marker .sociable {
+  margin: 0 4px;
+}
+
+a {
+  color: #fff;
+  text-decoration: none;
+}
+
+#side-quick-links .fa {
+  font-size: 22px;
+  color: #fff;
+  line-height: 40px;
+}
+.fa {
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: inherit;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  transform: translate(0, 0);
+}
+
+#side-quick-links li.marker .sociable {
+  margin: 0 4px;
+}
+
+a {
+  color: #fff;
+  text-decoration: none;
+}
+
+#side-quick-links .fa {
+  font-size: 22px;
+  color: #fff;
+  line-height: 40px;
+}
+
+#side-quick-links .watsapp {
+  top: 80px;
+}
+#side-quick-links li {
+  position: absolute;
+  right: -145px;
+  -webkit-transition: all .5s cubic-bezier(.19,1,.22,1) .2s;
+}
+
+#side-quick-links .watsapp .content {
+  background-color: #58cf00;
+  overflow: hidden;
+  padding-top: 8px;
+}
+
+#side-quick-links .content {
+  height: 40px;
+  width: 183px;
+  text-align: middle;
+  padding: 0 10px 0 46px;
+}
+#side-quick-links li.watsapp .content>a {
+  background: #4cac05;
+}
+
+#side-quick-links li .content>a {
+  width: 40px;
+  height: 40px;
+  line-height: 40px!important;
+  display: block;
+  z-index: 5;
+  opacity: 1!important;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+#side-quick-links .fa {
+  font-size: 22px;
+  color: #fff;
+  line-height: 40px;
+}
+.fa {
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: inherit;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  transform: translate(0, 0);
+}
+
+
+ */
